apps/docs/src/app/(docs)/2.0/(spec)/actions/page.mdx
# Actions

Actions are bound to elements via the `on` field. Buttons use `on.press` to trigger an
action when tapped.

```json
"my-button": {
  "type": "button",
  "props": { "label": "Go" },
  "on": {
    "press": {
      "action": "submit",
      "params": { "target": "https://my-snap.com/" }
    }
  }
}
```

| Action                                | Description                       |
| ------------------------------------- | --------------------------------- |
| [submit](#submit)                     | POST to server, get next page     |
| [open_url](#open_url)                 | Open external URL in browser      |
| [open_snap](#open_snap)               | Open a snap URL inline            |
| [open_mini_app](#open_mini_app)       | Launch mini app                   |
| [view_cast](#view_cast)               | Navigate to a cast                |
| [view_profile](#view_profile)         | Navigate to a profile             |
| [view_channel](#view_channel)         | Navigate to a channel             |
| [compose_cast](#compose_cast)         | Open cast composer                |
| [view_token](#view_token)             | View token in wallet              |
| [send_token](#send_token)             | Open send token flow              |
| [swap_token](#swap_token)             | Open swap token flow              |
| [send_transaction](#send_transaction) | Request an EVM wallet transaction |

---

## submit

POST to the snap server with a signed payload containing the user's FID, all collected
field input values, and a timestamp. The server returns the next snap page.

This is the primary interaction mechanism — how snaps navigate between pages. It is the
only action that triggers a server round-trip.

| Param    | Type   | Required | Description                                         |
| -------- | ------ | -------- | --------------------------------------------------- |
| `target` | string | Yes      | URL to POST to (HTTPS, or http://localhost for dev) |

```json
{
  "type": "button",
  "props": { "label": "Submit", "variant": "primary" },
  "on": {
    "press": {
      "action": "submit",
      "params": { "target": "https://my-snap.com/api/vote" }
    }
  }
}
```

See [Buttons — Input Data in POST Requests](/snap/buttons#input-data-in-post-requests)
for the full payload shape, and [Surfaces](/snap/surfaces) for the required `surface`
field (`standalone` vs `cast`).

---

## open_url

Open a URL in the system browser. No server round-trip. No input collection.

| Param    | Type   | Required | Description |
| -------- | ------ | -------- | ----------- |
| `target` | string | Yes      | URL to open |

```json
{
  "type": "button",
  "props": { "label": "Learn More", "icon": "external-link" },
  "on": {
    "press": {
      "action": "open_url",
      "params": { "target": "https://docs.farcaster.xyz/snap" }
    }
  }
}
```

---

## open_snap

Open a snap URL inline. Unlike `open_url`, the client renders the target as a snap
rather than opening a browser. Use this when linking to another snap from a button.

| Param    | Type   | Required | Description      |
| -------- | ------ | -------- | ---------------- |
| `target` | string | Yes      | Snap URL to open |

```json
{
  "type": "button",
  "props": { "label": "View Poll" },
  "on": {
    "press": {
      "action": "open_snap",
      "params": { "target": "https://poll.example.com/" }
    }
  }
}
```

---

## open_mini_app

Open a URL as an in-app Farcaster mini app.

| Param    | Type   | Required | Description  |
| -------- | ------ | -------- | ------------ |
| `target` | string | Yes      | Mini app URL |

```json
{
  "type": "button",
  "props": { "label": "Open App", "icon": "arrow-right" },
  "on": {
    "press": {
      "action": "open_mini_app",
      "params": { "target": "https://my-miniapp.com" }
    }
  }
}
```

---

## view_cast

Navigate to a cast by its hash.

| Param  | Type   | Required | Description                      |
| ------ | ------ | -------- | -------------------------------- |
| `hash` | string | Yes      | Cast hash (e.g. `"0xabc123..."`) |

```json
{
  "type": "button",
  "props": { "label": "View Cast" },
  "on": {
    "press": {
      "action": "view_cast",
      "params": { "hash": "0x0000000000000000000000000000000000000001" }
    }
  }
}
```

---

## view_profile

Navigate to a Farcaster user's profile.

| Param | Type   | Required | Description       |
| ----- | ------ | -------- | ----------------- |
| `fid` | number | Yes      | Farcaster user ID |

```json
{
  "type": "button",
  "props": { "label": "View Profile", "icon": "user" },
  "on": {
    "press": {
      "action": "view_profile",
      "params": { "fid": 3 }
    }
  }
}
```

---

## view_channel

Navigate to a Farcaster channel.

| Param        | Type   | Required | Description                          |
| ------------ | ------ | -------- | ------------------------------------ |
| `channelKey` | string | Yes      | Channel key, without a leading slash |

```json
{
  "type": "button",
  "props": { "label": "View Channel" },
  "on": {
    "press": {
      "action": "view_channel",
      "params": { "channelKey": "fc-devs" }
    }
  }
}
```

---

## compose_cast

Open the cast composer with optional pre-filled content.

| Param        | Type     | Required | Description               |
| ------------ | -------- | -------- | ------------------------- |
| `text`       | string   | No       | Pre-filled cast text      |
| `channelKey` | string   | No       | Target channel key        |
| `embeds`     | string[] | No       | URLs to embed in the cast |

> Put URLs in `embeds`, not in `text`.

```json
{
  "type": "button",
  "props": { "label": "Share", "icon": "share" },
  "on": {
    "press": {
      "action": "compose_cast",
      "params": {
        "text": "Check out this snap!",
        "embeds": ["https://my-snap.com"]
      }
    }
  }
}
```

---

## view_token

View a token in the wallet. The token is identified by a
[CAIP-19](https://github.com/ChainAgnostic/CAIPs/blob/main/CAIPs/caip-19.md) asset
identifier.

| Param   | Type   | Required | Description              |
| ------- | ------ | -------- | ------------------------ |
| `token` | string | Yes      | CAIP-19 token identifier |

```json
{
  "type": "button",
  "props": { "label": "View Token", "icon": "wallet" },
  "on": {
    "press": {
      "action": "view_token",
      "params": {
        "token": "eip155:8453/erc20:0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913"
      }
    }
  }
}
```

---

## send_token

Open the send flow for a token.

| Param              | Type   | Required | Description                     |
| ------------------ | ------ | -------- | ------------------------------- |
| `token`            | string | Yes      | CAIP-19 token identifier        |
| `amount`           | string | No       | Pre-filled amount               |
| `recipientFid`     | number | No       | Recipient identified by FID     |
| `recipientAddress` | string | No       | Recipient identified by address |

```json
{
  "type": "button",
  "props": { "label": "Send USDC", "icon": "coins" },
  "on": {
    "press": {
      "action": "send_token",
      "params": {
        "token": "eip155:8453/erc20:0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913",
        "amount": "10.00",
        "recipientFid": 3
      }
    }
  }
}
```

---

## swap_token

Open the swap flow between two tokens.

| Param       | Type   | Required | Description                              |
| ----------- | ------ | -------- | ---------------------------------------- |
| `sellToken` | string | No       | CAIP-19 identifier for the token to sell |
| `buyToken`  | string | No       | CAIP-19 identifier for the token to buy  |

```json
{
  "type": "button",
  "props": { "label": "Swap to USDC", "icon": "refresh-cw" },
  "on": {
    "press": {
      "action": "swap_token",
      "params": {
        "sellToken": "eip155:8453/slip44:60",
        "buyToken": "eip155:8453/erc20:0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913"
      }
    }
  }
}
```

---

## send_transaction

Request a single EVM transaction through the host wallet using `eth_sendTransaction`.
This action does not submit directly from the snap server and does not call a local
`submit` handler. The host opens the wallet flow, waits for it to settle, and may POST a
signed `transaction_result` callback back to the current snap URL.

Use `activityKey` when you want the React or React Native presenter to expose stable
pending state while the wallet flow is in progress. During the async handler, presenters
write:

- `/actions/<activityKey>/name`
- `/actions/<activityKey>/pending`

Buttons can bind `props.disabled` to that pending path so the CTA stays disabled while
the transaction is in flight.

| Param                  | Type   | Required | Description                                     |
| ---------------------- | ------ | -------- | ----------------------------------------------- |
| `chainId`              | string | Yes      | EVM chain ID as a string                        |
| `to`                   | string | Yes      | Recipient or contract address                   |
| `data`                 | string | No       | Hex calldata                                    |
| `value`                | string | No       | Hex value                                       |
| `gas`                  | string | No       | Hex gas limit                                   |
| `gasPrice`             | string | No       | Legacy hex gas price                            |
| `maxFeePerGas`         | string | No       | EIP-1559 max fee per gas                        |
| `maxPriorityFeePerGas` | string | No       | EIP-1559 max priority fee per gas               |
| `activityKey`          | string | No       | Stable render-state key for pending UI bindings |

```json
{
  "type": "button",
  "props": {
    "label": "Mint",
    "variant": "primary",
    "disabled": { "$bindState": "/actions/mint/pending" }
  },
  "on": {
    "press": {
      "action": "send_transaction",
      "params": {
        "activityKey": "mint",
        "chainId": "8453",
        "to": "0x0000000000000000000000000000000000000001",
        "data": "0x",
        "value": "0x0"
      }
    }
  }
}
```

### Transaction result callback

Hosts that support transaction feedback POST a signed callback payload to the snap URL
after the wallet request succeeds or fails. `parseRequest` returns this as
`ctx.action.type === "transaction_result"`.

The callback includes the wallet request under `ctx.action.transaction.request` and the
settlement result under `ctx.action.transaction.result`:

```ts
if (ctx.action.type === "transaction_result") {
  const { request, result } = ctx.action.transaction;

  if (result.success) {
    return renderSuccess({
      chainId: request.chainId,
      transactionHash: result.transactionHash,
    });
  }

  return renderFailure({
    reason: result.reason,
    message: result.message,
    transactionHash: result.transactionHash,
  });
}
```

Success results include `{ success: true, transactionHash }`. Failure results include
`{ success: false, reason, message?, code?, transactionHash? }`, where `reason` is
`"rejected_by_user"`, `"failed"`, or `"unknown"`.
